--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
     <li><a href="blog.html">Блог</a></li>
     <li><a href="coffe-formats.html">Форматы коффе</a></li>
     <li><a href="coffe.html">МЕНЮ КОФЕЕН</a></li>
-    <li><a href="development-plan.html">Адреса</a></li>
+    <li><a href="development-plan.html">План разработки</a></li>
     <li><a href="home.html">Home</a></li>
     <li><a href="index.html">Главная</a></li>
     <li><a href="landlord.html">АРЕНДОДАТЕЛЯМ</a></li>
